# artifex

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  run-e2e.sh
.atl/: skill-registry.md
crates/artifex-asset-management/: Cargo.toml
crates/artifex-asset-management/src/: asset.rs  asset_repository.rs  code_engine.rs  collection.rs  lib.rs  project.rs  project_name.rs  repository.rs
crates/artifex-job-queue/: Cargo.toml
crates/artifex-model-config/: Cargo.toml
crates/artifex-model-config/src/: audio_provider.rs  chat_provider.rs  credential_store.rs  image_provider.rs  lib.rs  model_profile.rs  prompt_template.rs  provider.rs  registry.rs  router.rs  routing_rule.rs  text_provider.rs  tts_provider.rs  video_provider.rs
crates/artifex-shared-kernel/: Cargo.toml
crates/artifex-shared-kernel/src/: errors.rs  events.rs  ids.rs  lib.rs  paths.rs  time.rs
e2e/: package-lock.json  package.json  playwright.config.ts
e2e-tests/: package-lock.json  package.json  wdio.conf.js
e2e-tests/helpers/: debug-api.js
e2e-tests/specs/: 01-app-launch.js  02-navigation.js  03-layout-structure.js  04-projects-page.js  05-assets-page.js  06-settings-page.js  (+25 more)
investigacion/: DOCUMENTO-MAESTRO.md  INGENIERIA-INVERSA-COMPLETA.md  arquitectura-tauri-v2.md  ddd-bounded-contexts.md  integracion-defold-mcp.md  modelos-frontier-abril-2026.md  modelos-ia-game-tools.md
src/: fix-paths.mjs  package-lock.json  package.json  svelte.config.js  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20240101000000_initial_schema.sql  20240102000000_asset_pipeline.sql  20240103000000_model_config.sql  20240104000000_schema_hardening.sql  20240105000000_identity.sql  20240106000000_worker_isolation.sql  20240107000000_asset_lineage.sql
src-tauri/src/: db.rs  dto.rs  lib.rs  main.rs  state.rs
src-tauri/src/application/: asset_service.rs  audio_metadata.rs  job_service.rs  mod.rs  project_service.rs
src-tauri/src/bootstrap/: app.rs  database.rs  identity.rs  mod.rs  model_config.rs  repositories.rs  services.rs  state.rs  workers.rs
src-tauri/src/commands/: animations.rs  assets.rs  atlas.rs  audio_gen.rs  code_gen.rs  convert_pixel_art.rs  generate_material.rs  generate_sprite_sheet.rs  generate_tile.rs  image_gen.rs  inpaint_image.rs  jobs.rs  list_code_templates.rs  mod.rs  outpaint_image.rs  projects.rs  publish.rs  quick_sprites.rs  remove_background.rs  renderer_3d.rs  slice_sprite_sheet.rs  texture.rs  video_gen.rs
src-tauri/src/dto/: animations.rs  assets.rs  atlas.rs  audio.rs  code.rs  image_gen.rs  image_processing.rs  jobs.rs  materials.rs  mod.rs  projects.rs  publish.rs  quick_sprites.rs  renderer_3d.rs  sprite_sheet.rs  tiles.rs  video.rs
src-tauri/src/identity/: commands.rs  dto.rs  mod.rs  repository.rs  service.rs
src-tauri/src/model_config/: built_in_templates.rs  commands.rs  keychain_store.rs  mod.rs  repository.rs  service.rs
src-tauri/src/model_config/providers/: elevenlabs.rs  fal_image.rs  fal_video.rs  huggingface_image.rs  kie_image.rs  mod.rs  replicate_image.rs  replicate_video.rs  together_chat.rs  together_text.rs
src-tauri/src/repositories/: asset_repository.rs  job_repository.rs  mod.rs  project_repository.rs
src-tauri/src/workers/: agent_code_worker.rs  animation_export_worker.rs  atlas_pack_types.rs  atlas_pack_worker.rs  audio_gen_worker.rs  code_worker.rs  image_gen_provider.rs  image_gen_worker.rs  image_process_worker.rs  material_worker.rs  mod.rs  quick_sprites_worker.rs  renderer_3d_worker.rs  runner.rs  seamless_texture_worker.rs  slice_worker.rs  sprite_worker.rs  tile_worker.rs  traits.rs  video_gen_worker.rs
src-tauri/tests/: application_service_test.rs  asset_repository_test.rs  credential_test.rs  image_gen_worker_test.rs  ipc_commands_test.rs  job_lifecycle_test.rs  job_repository_test.rs  project_repository_test.rs  sprite_worker_test.rs  test_helpers.rs
(+78 files in other folders)
