[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/artifex-shared-kernel",
    "crates/artifex-asset-management",
    "crates/artifex-job-queue",
    "crates/artifex-model-config",
]

[workspace.dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
