[package]
name = "artifex-asset-management"
version = "0.1.0"
edition = "2021"

[dependencies]
artifex-shared-kernel = { path = "../artifex-shared-kernel" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
